--- a/src/template.html
+++ b/src/template.html
@@ -34,7 +34,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Adil Islambekov</span>
           <br />
-          I'm the Web Developer.
+          I'm a Web Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -70,8 +70,7 @@
                 The best part of programming for me is that you always have to evolve and be up to date with all the latest releases that occur within the technologies. And, I'm quite passionate to learn something new every day. 
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="www.linkedin.com/in/adil-islambekov
-                ">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://www.linkedin.com/in/adil-islambekov/">
                   View Resume
                 </a>
               </span>
@@ -111,7 +110,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://projectlevel1adil.web.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="https://sun9-31.userapi.com/IQT0FqLPH0Q_CRW-OtMxLZIB1UCHT_gPx2d36w/B7YUbJ86qeQ.jpg" />
                   </div>
@@ -128,11 +127,7 @@
                 <h3 class="project-wrapper__text-title">React TODO Application</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    this.Classic and basic app class-Components ReactJS front-end application. Also used React-Bootstrap library. 
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://react-todo-adil.web.app/">
@@ -145,7 +140,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://react-todo-adil.web.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="https://sun6-19.userapi.com/XObV_ka5w5l5v1VSRMzdYyXUuBdUcgV8i__10w/ua06AgEs1_U.jpg" />
                   </div>
@@ -175,7 +170,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://nasa-apod-api-adil.web.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="https://sun9-2.userapi.com/ffglJfvOekWC0CLgz49_MUycSW_CLaa54KOwFg/1VquMCGs_NA.jpg" />
                   </div>
