new project added

--- a/src/template.html
+++ b/src/template.html
@@ -89,6 +89,36 @@
             Projects
           </h2>
 
+            <!-- Each .row is a project -->
+            <div class="row">
+              <div class="col-lg-4 col-sm-12">
+                <div class="project-wrapper__text">
+                  <h3 class="project-wrapper__text-title">Productivity app</h3>
+                  <div>
+                    <p class="mb-4">
+                      The app is still in development; however you already can check Firebae + React + React-Bootstrap app with deployed and realtime database using Firestore 
+                    </p>
+                  </div>
+                  <a target="_blank" class="cta-btn cta-btn--hero" href="https://productivity-app-prod.web.app/">
+                    See Live
+                  </a>
+                  <a target="_blank" class="cta-btn text-color-main" href="https://github.com/osnapitzadi/Productivity-app">
+                    Source Code
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-8 col-sm-12">
+                <div class="project-wrapper__image">
+                  <a href="https://productivity-app-prod.web.app/" target="_blank">
+                    <div data-tilt class="thumbnail rounded">
+                      <img class="img-fluid" src="https://sun9-38.userapi.com/impg/5_vuFuUvUCLuknlI2q3flIpOKKR-Wku0kxwj-Q/nitT_Rngjdg.jpg?size=2560x1600&quality=96&proxy=1&sign=b04316b11407b4cd0816c8c54647e370&type=album" />
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- /END Project -->
+
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -179,6 +209,7 @@
             </div>
           </div>
           <!-- /END Project -->
+        
         </div>
       </div>
     </section>
