--- a/src/template.html
+++ b/src/template.html
@@ -96,7 +96,7 @@
                   <h3 class="project-wrapper__text-title">Productivity app</h3>
                   <div>
                     <p class="mb-4">
-                      The app is still in development; however you already can check Firebae + React + React-Bootstrap app with deployed and realtime database using Firestore 
+                      The app is still in development; however, you already can check Firebase Auth + React + React-Bootstrap app with deployed and realtime database using Firestore 
                     </p>
                   </div>
                   <a target="_blank" class="cta-btn cta-btn--hero" href="https://productivity-app-prod.web.app/">
