--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-site-verification" content="2lFU9nQixIxKzjYLkG0FKT92g4bURIh70s3nAiIxsL4" />
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
@@ -22,6 +23,7 @@
     <script>
       ScrollReveal({ reset: false });
     </script>
+    
   </head>
 
   <!-- Follow the HTML instructions to create your stunning portfolio website -->
@@ -70,7 +72,7 @@
                 The best part of programming for me is that you always have to evolve and be up to date with all the latest releases that occur within the technologies. And, I'm quite passionate to learn something new every day. 
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://www.linkedin.com/in/adil-islambekov/">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1oK5acUzufK-whJ-t0NzGZLjIxbGxylNW/view?usp=sharing">
                   View Resume
                 </a>
               </span>
@@ -263,4 +265,13 @@
     </footer>
     <!-- /END Footer Section -->
   </body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/8.2.6/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="/__/firebase/8.2.6/firebase-analytics.js"></script>
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
 </html>
