--- a/src/template.html
+++ b/src/template.html
@@ -58,7 +58,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="https://sun9-69.userapi.com/c847120/v847120501/1be937/5kgAzf95cw0.jpg"
+                src="https://instagram.fyto1-1.fna.fbcdn.net/v/t51.2885-15/e35/s1080x1080/75642481_959326714522265_241683881640866813_n.jpg?tp=1&_nc_ht=instagram.fyto1-1.fna.fbcdn.net&_nc_cat=105&_nc_ohc=SDKQLJfS9cQAX9RJY80&oh=2d21500d83c561acbb378207c4ca8676&oe=606B6334"
                 alt="Profile Image"
               />
             </div>
@@ -98,7 +98,9 @@
                   <h3 class="project-wrapper__text-title">Productivity app</h3>
                   <div>
                     <p class="mb-4">
-                      The app is still in development; however, you already can check Firebase Auth + React + React-Bootstrap app with deployed and realtime database using Firestore 
+                      Productivity Full Stack Application using Firebase, <strong>ReactJS</strong>, Framer Motion and Bootstrap. Realtime database using Firestore.
+                      Track your time and manage tasks.
+                      <br/><br/>Data Visualisation of spend time coming soon...
                     </p>
                   </div>
                   <a target="_blank" class="cta-btn cta-btn--hero" href="https://productivity-app-prod.web.app/">
@@ -113,7 +115,7 @@
                 <div class="project-wrapper__image">
                   <a href="https://productivity-app-prod.web.app/" target="_blank">
                     <div data-tilt class="thumbnail rounded">
-                      <img class="img-fluid" src="https://sun9-38.userapi.com/impg/5_vuFuUvUCLuknlI2q3flIpOKKR-Wku0kxwj-Q/nitT_Rngjdg.jpg?size=2560x1600&quality=96&proxy=1&sign=b04316b11407b4cd0816c8c54647e370&type=album" />
+                      <img class="img-fluid" src="https://sun9-13.userapi.com/impg/ZR31HaFLK9ZkI-kh_wYQ_VvwTwqEdQ9_brBj5w/bfcHP4Kp_DE.jpg?size=2560x1600&quality=96&sign=2cfcc2ed368470c6265ed72a30b6e73d&type=album" />
                     </div>
                   </a>
                 </div>
@@ -265,13 +267,28 @@
     </footer>
     <!-- /END Footer Section -->
   </body>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="/__/firebase/8.2.6/firebase-app.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="/__/firebase/8.2.6/firebase-analytics.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
 
-  <!-- Initialize Firebase -->
-  <script src="/__/firebase/init.js"></script>
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyAf7Hgo4UJffWQSLqlwRLzY4fv1tR1RnUA",
+    authDomain: "adil-islambekov.firebaseapp.com",
+    databaseURL: "https://adil-islambekov.firebaseio.com",
+    projectId: "adil-islambekov",
+    storageBucket: "adil-islambekov.appspot.com",
+    messagingSenderId: "1040841130483",
+    appId: "1:1040841130483:web:1320cb2dfe61ec6790d286",
+    measurementId: "G-641FVH8T09"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </html>
